# aughor

./: .env.example  .gitignore  .mailmap  .vercelignore  AGENT_NOTES.md  AUDIT_2026-06-27.md  AUDIT_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONCEPT_NL2SQL_LEAN_DETERMINISTIC.md  CONTRIBUTING.md  FEATURES.md  M12_ORG_INTELLIGENCE_ROADMAP.md  NOTICE  NOUS_INTEGRATION.md  OPEN_SOURCE_READINESS.md  README.md  ROADMAP.md  SECURITY.md  STUDY_NL2SQL_ADVISORY_JUXTAPOSED.md  TEST_REPORT.md  agents.db  docker-compose.yml  main.py  pyproject.toml  start.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
aughor/: api.py  cli.py  rules.py  secretvault.py  starters.py  stats.py  telemetry.py
aughor/actions/: __init__.py  executor.py  models.py  store.py
aughor/agent/: answer_errors.py  ask_router.py  benchmarks.py  bootstrap.py  calibrate_hypothesis_cascade.py  clarify.py  complexity.py  connection_selector.py  escalate.py  evidence_budget.py  exhibit.py  explore.py  federated_planner.py  followup.py  graph.py  grounding.py  handoff.py  hypothesis_cascade.py  investigate.py  learning_receipt.py  loss_signals.py  nodes.py  opportunity.py  orchestrator.py  phase_waves.py  program_planner.py  progress.py  prompts.py  prompts_explore.py  prompts_investigate.py  prompts_ontology.py  schema_annotators.py  schema_focus.py  soma.py  sql_consensus.py  sql_explore.py  state.py  verifier.py  verify.py  wandering.py
aughor/automations/: __init__.py  adopt.py  engine.py  models.py  probes.py  scheduler.py  (+1 more)
data/: action_triggers.json  agent_memory.json  answer_sweep.jsonl  artifacts.db  briefing_cache.json  canvas_instructions.json  causal_proposals.json  events.yaml  global_rules.md  glossary.yaml  mat_cache.duckdb.wal  metrics.json  patterns_cache.json  playbook.json  quality_sweep.jsonl  quality_sweep_findings.md  quality_sweep_report.md  schema_cache.json  schema_profiles.json  seed.py  workspaces.db
design-mockups/: aughor-console-direction.html  aughor-full-redesign.html  aughor-swiss-prototype.html  shell-nav-redesign.html
docs/: 10X_AND_SPIDER2_PROGRAM_2026-07-06.md  ADAPTIVE_INFERENCE_AND_SEMANTIC_OPERATORS.md  ADAPTIVE_TEMPORAL_SCOPE.md  AGENTIC_ARCHITECTURE.md  AGENTIC_PLATFORM_UNIFICATION_2026-07-13.md  AMBIGUITY_LEDGER_2026-07-06.md  BRIEFING_COCKPIT_2026-07-18.md  BRIEFING_DESIGN_HANDOFF.md  CHART_SELECTION_GUIDE.md  CONTEXT_ENCODING_ARCHITECTURE.md  DATABRICKS_HAR_CANVAS_BIRTH_STUDY_2026-07-16.md  DATABRICKS_HAR_SQLX_AUTODOC_STUDY_2026-07-15.md  DATABRICKS_OSS_AND_AGENTIC_PLATFORM_STUDY_2026-07-11.md  DEEP_ANALYSIS_QUALITY_2026-07-09.md  DOMAIN_EXPERTISE_PACKS.md  DOMAIN_EXPERTISE_PACKS_10X.md  EXPLORER_GROUNDED_GENERATION.md  EXPLORER_INTELLIGENCE_FIXES.md  EXPLORER_SYNTHESIS_AND_FRONTIER.md  EXTERNAL_SOURCES_STUDY_AND_RECOMMENDATIONS_2026-07-07.md  FIVE_REPO_STUDY_2026-07-23.md  FLAG_GRADUATION_AUDIT_2026-07-22.md  GROUND_FIRST_RESOLUTION_2026-07-13.md  INTELLIGENCE_UNIFICATION.md  INTERACTIVE_DATA_AGENT_VISION_2030.md  KERNEL_ARCHITECTURE.md  LOTUS_STUDY_AND_INTEGRATION.md  MCP_SERVER.md  MISSIMI_EVAL_2026-06-21.md  MODE_ARCHITECTURE_AND_CROSS_POLLINATION.md  MOTHERDUCK_LEARNINGS.md  NL2SQL_WINNING_FORMULA_2026.md  OVERVIEW_INTERESTING_FACTS_2026-07-14.md  PALANTIR_FOUNDRY_STUDY_2026-07-22.md  PARALLEL_MULTIAGENT_GROUNDWORK.md  PIPELINE_QUALITY_ASSESSMENT.md  PLATFORM_AGENT_SEPARATION.md  PLATFORM_ARCHITECTURE.md  PLATFORM_PROGRAM_2026-07-24.md  PLATFORM_REVIEW_AND_IMPLEMENTATION_PROGRAM_2026-07-12.md  (+23 more)
evals/: FINDINGS_full_pipeline.md  README.md  __init__.py  _add_accept_sql.py  _analyze_13b.py  _probe_convention.py  _unify_accept_sql.py  ablation_eval.py  ablation_missimi.jsonl  ablation_missimi_results.json  ambiguity_eval.py  aughor_quality_ab.py  bakeoff_compare.py  bakeoff_gemma.json  bakeoff_incumbent.json  dataset.py  dev_bench.py  dev_compare.py  gepa_optimize.py  golden.jsonl  golden_sql.jsonl  golden_sql_expanded.jsonl  guard_coverage.py  interactive.py  its_structural.py  mlflow_scorers.py  model_bakeoff.py  profile_ada.py  ratchet.py  reliability.py  route_wide_eval.py  run.py  run_clickbench.py  run_golden.py  run_realdb.py  run_tpcds.py  run_tpch.py  schema_latency_probe.py  scorers.py  spider2.py  (+13 more)
hermes/: api.py  cli.py
scripts/: answer_sweep.py  chaos_drill.py  deep_assess.py  dump_openapi.py  flows.py  flush_id_distributions.py  quality_sweep.py  revalidate_findings.py  smoke.py  spider2_fail_analysis.py  verify_xsec.py
tests/: conftest.py  test_al_live_migrations.py  test_capability_pipeline.py  test_context_manifest.py  test_declarative_modes.py  test_eval_ratchet.py  test_execution_scope.py  test_govern_actions.py  test_governor_ceiling.py  test_plan_gate.py  test_premise_check.py  test_priors.py  test_semantic_context.py  test_semantic_contract.py  test_trust_facade.py
web/: README.md  eslint.config.mjs  package-lock.json  package.json
(+1097 files in other folders)
