[project]
name = "aughor"
version = "0.1.0"
description = "Autonomous Data Analyst — investigative agent over your warehouse"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "openai>=1.50.0",
    "instructor>=1.4.0",
    "duckdb>=1.1.0",
    "polars>=1.0.0",
    "scipy>=1.13.0",
    "numpy>=1.26.0",
    "sqlglot>=25.0.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
    "cryptography>=48.0.0",
    "psycopg2-binary>=2.9.12",
    "statsmodels>=0.14.6",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.9.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "python-multipart>=0.0.9",
    "apscheduler>=3.10.0",
    "pytz>=2024.1",
    "reportlab>=4.5.1",
    "python-pptx>=1.0.2",
    "matplotlib>=3.11.0",
]

[project.optional-dependencies]
docs = [
    "PyPDF2>=3.0.0",
    "python-docx>=1.0.0",
]
warehouse = [
    "ibis-framework[duckdb,postgres]>=9.0.0",
    "connectorx>=0.3.3",
    "google-cloud-bigquery>=3.0.0",
    "snowflake-connector-python>=3.0.0",
    "PyMySQL>=1.0.0",
]
crm = [
    "stripe>=7.0.0",
    "hubspot-api-client>=8.0.0",
    "simple-salesforce>=1.12.0",
]
cloud-storage = [
    "azure-storage-blob>=12.0.0",
]
knowledge-sync = [
    "atlassian-python-api>=3.41.0",
    "notion-client>=2.2.0",
]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "pytest-anyio>=0.0.0",
]
observability = [
    "langfuse>=2.0.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp>=1.24.0",
]
evals = [
    "braintrust>=0.0.150",
    "autoevals>=0.0.70",
]

[project.scripts]
aughor = "aughor.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests that require a live LLM (deselect with -m 'not e2e')",
]

[tool.hatch.build.targets.wheel]
packages = ["aughor"]
